--- a/package.json
+++ b/package.json
@@ -16,9 +16,5 @@
   "devDependencies": {
     "electron": "^9.1.0"
   },
-  "dependencies": {
-    "chromedriver": "^83.0.1",
-    "electron-chromedriver": "^9.0.0",
-    "selenium-webdriver": "^4.0.0-alpha.7"
-  }
+  "dependencies": {}
 }
